# minimizer_ibf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: README.md  example.fasta
data/statistics/: README.md  plot00  plot01  plot02  plot03  plot04  plot05  plot06  plot07  plot08  plot09  plot10  plot11  plots.R
include/: ibf.hpp  minimiser_model.hpp  minimizer.hpp  minimizer_model.hpp  strong_types.hpp
src/: build_min_ibf.cpp  generate_reads.cpp  ibf_example.cpp  minimizer_benchmark.cpp  minimizer_example.cpp  search_min_ibf.cpp
